{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 25,
  "lineage": "3397be73-9581-d5e2-1364-5e8cff1a1e2a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gj_internat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:387820889742:internet-gateway/igw-02753ab5bce53fc73",
            "id": "igw-02753ab5bce53fc73",
            "owner_id": "387820889742",
            "tags": {
              "name": "gj_int_gatweay"
            },
            "vpc_id": "vpc-091e47a5de24b830c"
          },
          "dependencies": [
            "aws_vpc.gj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "gj-ecs-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:387820889742:loadbalancer/app/gj-ecs-alb/bfd5f7ed433ec1e9",
            "arn_suffix": "app/gj-ecs-alb/bfd5f7ed433ec1e9",
            "dns_name": "gj-ecs-alb-1262429599.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:387820889742:loadbalancer/app/gj-ecs-alb/bfd5f7ed433ec1e9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "gj-ecs-alb",
            "security_groups": [
              "sg-0ca4384bc6f0d59f7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0537133eb2e77fb2a"
              },
              {
                "subnet_id": "subnet-06898a76a2a3b0530"
              }
            ],
            "subnets": [
              "subnet-0537133eb2e77fb2a",
              "subnet-06898a76a2a3b0530"
            ],
            "tags": {
              "Environment": "devl"
            },
            "vpc_id": "vpc-091e47a5de24b830c",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.gj_sec_grp",
            "aws_subnet.gj_subnet1",
            "aws_subnet.gj_subnet2",
            "aws_vpc.gj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "gj-ecs-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:387820889742:listener/app/gj-ecs-alb/bfd5f7ed433ec1e9/406089d49e50bbb0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:387820889742:targetgroup/gj-ecs20210414134551134100000002/614b2e63a39c7fd6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:387820889742:listener/app/gj-ecs-alb/bfd5f7ed433ec1e9/406089d49e50bbb0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:387820889742:loadbalancer/app/gj-ecs-alb/bfd5f7ed433ec1e9",
            "port": 7000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.gj-ecs-alb",
            "aws_lb_target_group.gj-ecs-service-target-group",
            "aws_security_group.gj_sec_grp",
            "aws_subnet.gj_subnet1",
            "aws_subnet.gj_subnet2",
            "aws_vpc.gj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gj-ecs-service-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:387820889742:targetgroup/gj-ecs20210414134551134100000002/614b2e63a39c7fd6",
            "arn_suffix": "targetgroup/gj-ecs20210414134551134100000002/614b2e63a39c7fd6",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/ping",
                "port": "7000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:387820889742:targetgroup/gj-ecs20210414134551134100000002/614b2e63a39c7fd6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "gj-ecs20210414134551134100000002",
            "name_prefix": "gj-ecs",
            "port": 7000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "gj-ecs-service-target-group"
            },
            "target_type": "ip",
            "vpc_id": "vpc-091e47a5de24b830c"
          },
          "dependencies": [
            "aws_vpc.gj_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gj_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-023c9e4740eabf5c9",
            "owner_id": "387820889742",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02753ab5bce53fc73",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "gj_route_table"
            },
            "vpc_id": "vpc-091e47a5de24b830c"
          },
          "dependencies": [
            "aws_internet_gateway.gj_internat_gateway",
            "aws_vpc.gj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gj_route_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfc86feb5ab489dc",
            "route_table_id": "rtb-023c9e4740eabf5c9",
            "subnet_id": "subnet-06898a76a2a3b0530"
          },
          "dependencies": [
            "aws_internet_gateway.gj_internat_gateway",
            "aws_route_table.gj_route_table",
            "aws_subnet.gj_subnet1",
            "aws_vpc.gj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gj_route_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031869f991a05af2d",
            "route_table_id": "rtb-023c9e4740eabf5c9",
            "subnet_id": "subnet-0537133eb2e77fb2a"
          },
          "dependencies": [
            "aws_internet_gateway.gj_internat_gateway",
            "aws_route_table.gj_route_table",
            "aws_subnet.gj_subnet2",
            "aws_vpc.gj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gj_sec_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:387820889742:security-group/sg-0ca4384bc6f0d59f7",
            "description": "gj_Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca4384bc6f0d59f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 7000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gj_allow_tls",
            "name_prefix": null,
            "owner_id": "387820889742",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-091e47a5de24b830c"
          },
          "dependencies": [
            "aws_vpc.gj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gj_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:387820889742:subnet/subnet-06898a76a2a3b0530",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.0/17",
            "id": "subnet-06898a76a2a3b0530",
            "map_public_ip_on_launch": true,
            "owner_id": "387820889742",
            "tags": {
              "name": "gj_subnet1"
            },
            "vpc_id": "vpc-091e47a5de24b830c"
          },
          "dependencies": [
            "aws_vpc.gj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gj_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:387820889742:subnet/subnet-0537133eb2e77fb2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.128.0/17",
            "id": "subnet-0537133eb2e77fb2a",
            "map_public_ip_on_launch": true,
            "owner_id": "387820889742",
            "tags": {
              "name": "gj_subnet2"
            },
            "vpc_id": "vpc-091e47a5de24b830c"
          },
          "dependencies": [
            "aws_vpc.gj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gj_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:387820889742:vpc/vpc-091e47a5de24b830c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0de89f97cd3fabfaa",
            "default_route_table_id": "rtb-021ff1a3c2488bf3a",
            "default_security_group_id": "sg-09713a15886e5abc7",
            "dhcp_options_id": "dopt-d97bb8b2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-091e47a5de24b830c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-021ff1a3c2488bf3a",
            "owner_id": "387820889742",
            "tags": {
              "name": "gj_vpc"
            }
          }
        }
      ]
    }
  ]
}